<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/udacityJump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity_logo" />

    <TextView
        android:id="@+id/udacityEtymology"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/udacityWord"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/udacity_etymology" />

    <TextView
        android:id="@+id/udacityWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/udacityPronunciation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:fontFamily="serif-monospace"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/udacity_word" />

    <TextView
        android:id="@+id/udacityPronunciation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/udacityDefinition"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/udacity_pronunciation" />

    <TextView
        android:id="@+id/udacityDefinition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/udacityInfo"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/udacity_definition" />

    <TextView
        android:id="@+id/udacityInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:fontFamily="monospace"
        android:autoLink="all"
        android:textColorLink="@color/colorVividBlue"
        android:textColor="@color/colorVividBlue"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/udacity_info" />

</RelativeLayout>